[MOV] web_editor: move DOMPurify to the lib directory
DOMPurify is a library but it was mixed in with Odoo code.

Part-of: odoo/odoo#94516

--- a/addons/web_editor/static/src/js/editor/odoo-editor/test/editor-test.html
+++ b/addons/web_editor/static/src/js/editor/odoo-editor/test/editor-test.html
@@ -20,7 +20,7 @@
                 vertical-align: middle;
             }
         </style>
-        <script src="lib/DOMPurify.js"></script>
+        <script src="../../../../../lib/DomPurify.js"></script>
         <script src="lib/mocha.js"></script>
         <script src="lib/chai.js"></script>
         <script>mocha.setup('bdd').fullTrace()</script>
