[FIX] web,*: more cleanups in tests
This commit intents on reducing the memory footprint of a full test run.
To achieve this, the following fixes have been introduced:

- completely removing CSS transitions ("animation" & "transition"
properties) by default, and allowing to also remove JS transitions (
`animate` & "smooth" scrolls);

- no more reliance on trusted events in tests dispatched by native
element methods, such as `scroll()`, `focus()`, etc., and dispatch
"programmatic" events instead (this allows to ensure consistent event
timing and properties);

- explicitly cleaning up the fixture after each test requiring one, as
well as the event handlers that may have been attached to it;

- explicitly cleaning up all global mocked objects extending the
'EventTarget' class, effectively taking more objects into account (like
SharedWorkers, WebSockets, etc.).

Part-of: odoo/odoo#189710
Related: odoo/enterprise#78636
Signed-off-by: Michaël Mattiello (mcm) <mcm@odoo.com>

--- a/addons/web/static/lib/hoot/tests/index.html
+++ b/addons/web/static/lib/hoot/tests/index.html
@@ -38,6 +38,7 @@
                     "/web/static/lib/hoot/hoot": "/web/static/lib/hoot/hoot.js",
                     "/web/static/lib/hoot/lib/diff_match_patch": "/web/static/lib/hoot/lib/diff_match_patch.js",
                     "/web/static/lib/hoot/main_runner": "/web/static/lib/hoot/main_runner.js",
+                    "/web/static/lib/hoot/mock/animation": "/web/static/lib/hoot/mock/animation.js",
                     "/web/static/lib/hoot/mock/console": "/web/static/lib/hoot/mock/console.js",
                     "/web/static/lib/hoot/mock/date": "/web/static/lib/hoot/mock/date.js",
                     "/web/static/lib/hoot/mock/math": "/web/static/lib/hoot/mock/math.js",
