[FIX] web: allow to toggle by clicking label
before this commit, to select and unselect the newly
added include file store option, user has to click on
the checkbox

after this commit, user can select or deselect the
value even by clicking on the field label

closes odoo/odoo#227329

closes odoo/odoo#227443

Signed-off-by: Aaron Bohy (aab) <aab@odoo.com>
Signed-off-by: Julien Castiaux (juc) <juc@odoo.com>

--- a/addons/web/static/src/public/database_manager.qweb.html
+++ b/addons/web/static/src/public/database_manager.qweb.html
@@ -290,7 +290,7 @@
                                 </div>
                             </div>
                              <div class="row mb-3" id="filestore_div">
-                                <label for="backup_format" class="col-md-4 col-form-label">Include filestore</label>
+                                <label for="filestore" class="col-md-4 col-form-label">Include filestore</label>
                                 <div class="col-md-8">
                                      <input id="filestore" type="checkbox" name="filestore" value="1" checked class="form-check-input" />
                                      <input type="hidden" name="filestore" value="0"/>
